// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnConfiguration component should render all columns 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 2`] = `
<DocumentFragment>
  <span>
    uniprot id
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 3`] = `
<DocumentFragment>
  <div
    class="info-list info-list--compact"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Recommended name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <strong>
          rec full Name
        </strong>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          EC number
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        1.2.3.4
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Short names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        recommended short name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Alternative names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            a full alt Name (short alt name1) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Cleaved into 1 chains
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            containsrec full Name (containsrecommended short name)  
            <strong>
              Alternative names: 
            </strong>
            containsa full alt Name (containsshort alt name1) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Submission names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            sub full Name
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Biotech name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        biotech
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          CD Antigen Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      />
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          INN Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 4`] = `
<DocumentFragment>
  <div
    class="info-list info-list--compact"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <strong>
          some Gene 
          <button
            aria-controls="<UUID>"
            aria-expanded="false"
            class="evidence-tag svg-colour-unreviewed"
            data-testid="evidence-tag-trigger"
            type="button"
          >
            <svg
              fill="currentColor"
              height="12"
              viewBox="0 0 10 15"
              width="12"
            >
              <path
                d="M10 0H0v15l5-5 5 5V0z"
              />
            </svg>
            <span
              class="evidence-tag__label"
              title=""
            >
              1 automatic annotation
            </span>
          </button>
          <div
            class="evidence-tag-content "
            data-testid="evidence-tag-content"
            id="<UUID>"
          />
        </strong>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some Syn 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          ORF names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some orf 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 publication
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Ordered locus names
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some locus 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 5`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    scientific name (common name)  (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 6`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 7`] = `
<DocumentFragment>
  <div>
    some Gene
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 8`] = `
<DocumentFragment>
  some locus 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 9`] = `
<DocumentFragment>
  some orf 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 publication
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 10`] = `
<DocumentFragment>
  some Syn 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 11`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606 
  </a>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    rel="noopener"
    target="_blank"
  >
    NCBI
    <svg
      fill="currentColor"
      viewBox="0 0 576 512"
      width="12.5"
    >
      <path
        d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 12`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 13`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 14`] = `
<DocumentFragment>
  <p>
    <a
      href="/taxonomy/9606"
    >
      scientific name (common name)  (synonyms 1)
    </a>
  </p>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 15`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <hr />
  <h3
    id="isoID1"
  >
    isoID1
  </h3>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        syn value
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        value1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 16`] = `
<DocumentFragment>
  <div
    class="sequence"
  >
    <div
      class="sequence__sequence"
    >
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          >
            10
          </text>
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            SAPSQDFMRF
          </text>
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 17`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 18`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 19`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 20`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      isoform 1
    </h3>
    Molecular mass is 2.1 Da. Determined by LSI. note value
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 21`] = `
<DocumentFragment>
  <div
    class="loader-container"
  >
    <svg
      class="loader"
      height="100"
      viewBox="0 0 100 100"
      width="100"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M9 50c6.833-10.667 13.667-16 20.5-16S43.167 39.333 50 50s13.667 16 20.5 16S84.167 60.667 91 50"
          stroke="#3ca3ca"
          stroke-linecap="square"
          stroke-width="2"
        />
        <circle
          cx="9"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="30"
          cy="34"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="50"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="70"
          cy="66"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="91"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 22`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 23`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 24`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 25`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 26`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at positions 
      <span>
        rna position 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </span>
    </div>
    <div>
      <span>
        value 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 27`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <svg
        fill="currentColor"
        viewBox="0 0 576 512"
        width="12.5"
      >
        <path
          d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 28`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 29`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 30`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 31`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 32`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 33`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 34`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 35`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <strong>
      1.2.4.5
    </strong>
     some reaction
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     direction 
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        Imported
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 36`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </span>
    <section
      class="text-block"
    >
      value2
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 37`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 38`] = `
<DocumentFragment>
  1.2.3.4 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 39`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 40`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 41`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 42`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 43`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 44`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 45`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 46`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 47`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 48`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 49`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 50`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <svg
        fill="currentColor"
        viewBox="0 0 576 512"
        width="12.5"
      >
        <path
          d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 51`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #keyword value
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 52`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #KW-11111
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 53`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 54`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 55`] = `
<DocumentFragment>
  <span
    class="uniprot-title__status icon--unreviewed"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 400 512"
    >
      <path
        d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 56`] = `
<DocumentFragment>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 57`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 58`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 59`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 60`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 61`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 62`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 63`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 64`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 65`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 66`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 67`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div>
      <strong>
        location value
      </strong>
       
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
      : topology value 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </div>
    <section
      class="text-block"
    >
      value
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 68`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 69`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 70`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 71`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 72`] = `
<DocumentFragment>
  <h5>
    Isoform 4
  </h5>
  <section
    class="text-block"
  >
    value
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 73`] = `
<DocumentFragment>
  <h3>
    DiseaseEntry Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </span>
  <div
    class="info-list "
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            value2
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Description
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some description
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          See also
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <a
          class="external-link"
          href="https://www.omim.org/entry/3124"
          rel="noopener"
          target="_blank"
        >
          3124
          <svg
            fill="currentColor"
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
            />
          </svg>
        </a>
          
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 74`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 75`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 76`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 77`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 78`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 79`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 80`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 81`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 82`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 83`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 84`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 85`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 86`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 87`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 88`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 89`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 90`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 91`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 92`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 93`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 94`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/6789"
      >
        6789
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/123415"
      >
        123415
      </a>
    </li>
    <li>
      <button
        class="button tertiary"
        data-testid="expandable-message"
        type="button"
      >
        More items
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 95`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 96`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 97`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 98`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 99`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 100`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 101`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 102`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 103`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 104`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 105`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 106`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 107`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 108`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 109`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 110`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 111`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 112`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 113`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 114`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 115`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 116`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 117`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 118`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 119`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 120`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 121`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 122`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 123`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 124`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 125`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 126`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 127`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 128`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 129`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 130`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 131`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 132`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 133`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 134`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 135`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 136`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 137`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 138`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 139`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 140`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 141`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 142`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 143`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 144`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 145`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 146`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 147`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 148`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 149`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ensembl.org/id/id value"
        rel="noopener"
        target="_blank"
      >
        id value
        <svg
          fill="currentColor"
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
          />
        </svg>
      </a>
       
      <a
        class="external-link"
        href="https://www.ensembl.org/id/description value"
        rel="noopener"
        target="_blank"
      >
        description value
        <svg
          fill="currentColor"
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v128c0 21-26 32-41 17l-36-36-243 244c-10 9-25 9-34 0l-23-23c-9-9-9-24 0-34L443 77l-36-36c-15-15-4-41 17-41h128c13 0 24 11 24 24zM407 271l-16 16a24 24 0 00-7 17v144H64V128h264a24 24 0 0017-7l16-16c15-15 4-41-17-41H48C21 64 0 85 0 112v352c0 27 21 48 48 48h352c27 0 48-21 48-48V288c0-22-26-32-41-17z"
          />
        </svg>
      </a>
       [
      <a
        href="#Q9NXB0-1"
      >
        Q9NXB0-1
      </a>
      ]
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 150`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 151`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 152`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 153`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 154`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 155`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 156`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 157`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 158`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 159`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 160`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 161`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 162`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 163`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 164`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 165`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 166`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 167`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 168`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 169`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 170`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 171`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 172`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 173`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 174`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 175`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 176`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 177`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 178`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 179`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 180`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 181`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 182`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 183`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 184`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 185`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 186`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 187`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 188`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 189`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 190`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 191`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 192`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 193`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 194`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 195`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 196`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 197`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 198`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 199`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 200`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 201`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 202`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 203`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 204`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 205`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 206`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 207`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 208`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 209`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 210`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 211`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 212`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 213`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 214`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 215`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 216`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 217`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 218`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 219`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 220`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 221`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 222`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 223`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 224`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 225`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 226`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 227`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 228`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 229`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 230`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 231`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 232`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 233`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 234`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 235`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 236`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 237`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 238`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 239`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 240`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 241`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 242`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 243`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 244`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 245`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 246`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 247`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 248`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 249`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 250`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 251`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 252`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 253`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 254`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 255`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 256`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 257`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 258`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 259`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 260`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 261`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 262`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 263`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 264`] = `<DocumentFragment />`;
